--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="frame-src https://public.tableau.com;">
     <title>Data Analytics Dashboard 📊✨</title>
     <style>
         body {
@@ -72,22 +71,12 @@
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             animation: pulse 2s infinite;
-            position: relative;
         }
         .tableau-embed iframe {
             border: none;
             width: 100%;
             height: 600px;
             border-radius: 10px;
-        }
-        .loading {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            color: #fff;
-            font-size: 1.2em;
-            display: none;
         }
         .stats {
             display: flex;
@@ -169,15 +158,8 @@
             <h2>Interactive Tableau Dashboards 📈</h2>
             <p>Our Tableau dashboards provide real-time insights into key metrics. Explore the embedded dashboard below! 🔍</p>
             <div class="tableau-embed">
-                <div class="loading" id="loading">Loading Dashboard... ⏳</div>
-                <iframe
-                    src="https://public.tableau.com/views/HW1SS18/Dashboard1?:language=en-US&:embed=true&:showVizHome=no&:toolbar=no&:display_count=n&:origin=viz_share_link"
-                    title="Tableau Dashboard"
-                    allowfullscreen
-                    onload="document.getElementById('loading').style.display='none';"
-                >
-                    Your browser does not support iframes. View the <a href="https://public.tableau.com/views/HW1SS18/Dashboard1">dashboard directly</a>.
-                </iframe>
+                <!-- Replace the src with your actual Tableau Public embed link -->
+                <iframe src="https://public.tableau.com/views/YOUR_TABLEAU_VIZ/Sheet1?:showVizHome=no&:embed=true" title="Tableau Dashboard"></iframe>
             </div>
         </div>
         <div class="section" id="insights">
@@ -193,7 +175,7 @@
         </div>
     </div>
     <footer>
-        <p>© 2025 Data Analytics Hub. All rights reserved. Made with ❤️</p>
+        <p>&copy; 2025 Data Analytics Hub. All rights reserved. Made with ❤️</p>
     </footer>
 
     <script>
@@ -228,17 +210,6 @@
                     behavior: 'smooth'
                 });
             });
-        });
-
-        // Show loading indicator until iframe loads
-        window.addEventListener('load', () => {
-            const loading = document.getElementById('loading');
-            setTimeout(() => {
-                if (loading.style.display !== 'none') {
-                    loading.textContent = 'Failed to load dashboard. Please try again later. 😔';
-                    loading.style.display = 'block';
-                }
-            }, 10000); // Show error after 10 seconds if iframe doesn't load
         });
     </script>
 </body>
