--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="frame-src https://public.tableau.com;">
     <title>Data Analytics Dashboard 📊✨</title>
     <style>
         body {
@@ -71,12 +72,24 @@
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             animation: pulse 2s infinite;
+            position: relative;
         }
         .tableau-embed iframe {
             border: none;
             width: 100%;
-            height: 600px;
+            height: 800px; /* Increased height for better dashboard visibility */
             border-radius: 10px;
+        }
+        .loading {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: #fff;
+            font-size: 1.2em;
+            background: rgba(0, 0, 0, 0.5);
+            padding: 10px 20px;
+            border-radius: 5px;
         }
         .stats {
             display: flex;
@@ -133,7 +146,7 @@
         /* Responsive Design */
         @media (max-width: 768px) {
             header h1 { font-size: 2em; }
-            .tableau-embed iframe { height: 400px; }
+            .tableau-embed iframe { height: 500px; } /* Adjusted for mobile */
             .stat-card { width: 100%; }
         }
     </style>
@@ -158,9 +171,19 @@
             <h2>Interactive Tableau Dashboards 📈</h2>
             <p>Our Tableau dashboards provide real-time insights into key metrics. Explore the embedded dashboard below! 🔍</p>
             <div class="tableau-embed">
-                <!-- Replace the src with your actual Tableau Public embed link -->
-                <iframe src="https://public.tableau.com/views/YOUR_TABLEAU_VIZ/Sheet1?:showVizHome=no&:embed=true" title="Tableau Dashboard"></iframe>
+                <div class="loading" id="loading">Loading Dashboard... ⏳</div>
+                <iframe
+                    src="https://public.tableau.com/views/HW1SS18/Dashboard1?:language=en-US&:embed=true&:showVizHome=no&:toolbar=no&:display_count=n&:origin=viz_share_link"
+                    title="Tableau Dashboard"
+                    allowfullscreen
+                    onload="document.getElementById('loading').style.display='none';"
+                >
+                    Your browser does not support iframes. View the <a href="https://public.tableau.com/views/HW1SS18/Dashboard1">dashboard directly</a>.
+                </iframe>
             </div>
+            <p style="text-align: center; color: #666; font-size: 0.9em;">
+                Note: If the dashboard doesn't load, ensure your browser allows content from public.tableau.com and disable ad blockers. 😊
+            </p>
         </div>
         <div class="section" id="insights">
             <h2>Key Insights 💡</h2>
@@ -175,7 +198,7 @@
         </div>
     </div>
     <footer>
-        <p>&copy; 2025 Data Analytics Hub. All rights reserved. Made with ❤️</p>
+        <p>© 2025 Data Analytics Hub. All rights reserved. Made with ❤️</p>
     </footer>
 
     <script>
@@ -210,6 +233,17 @@
                     behavior: 'smooth'
                 });
             });
+        });
+
+        // Handle iframe loading errors
+        window.addEventListener('load', () => {
+            const loading = document.getElementById('loading');
+            setTimeout(() => {
+                if (loading.style.display !== 'none') {
+                    loading.textContent = 'Failed to load dashboard. Check your connection or view it directly. 😔';
+                    loading.style.display = 'block';
+                }
+            }, 10000); // Show error after 10 seconds if iframe doesn't load
         });
     </script>
 </body>
